test: credentials handler
